manifest/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: validating-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validating-webhook
  template:
    metadata:
      labels:
        app: validating-webhook
    spec:
      serviceAccount: val-sa
      containers:
        - name: validating-webhook
          #Use 1.0.1 for validate
          #image: 0xmantis/validating-webhook:1.0.1
          #Use 1.0.3 for mutate
          image: 0xmantis/validating-webhook:1.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 443
          volumeMounts:
            - name: cert
              mountPath: /etc/opt
              readOnly: true
      volumes:
        - name: cert
          secret:
            secretName: mycert
