manifest/test-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: test-app
  labels: 
    app: random
    name: raju
spec:
  containers:
    - name: test-app
      image: ubuntu:focal
      command: ["/bin/bash"]
      args: ["-c", "sleep infinity"]
