manifest/mut-webhook.yaml
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
  name: mutate-labels
  annotations:
    cert-manager.io/inject-ca-from: default/client
webhooks:
  - name: mutate-labels.sachin.com
    clientConfig:
      service:
        namespace: default
        name: validating-webhook
        path: /mutate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZYakNDQTBhZ0F3SUJBZ0lVWExJYWZaOXEyRnEvL0JoM2oyajJ3aHNiOEJjd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0tURW5NQ1VHQTFVRUF3d2VkbUZzYVdSaGRHbHVaeTEzWldKb2IyOXJMbVJsWm1GMWJIUXVjM1pqTUI0WApEVEl5TURnd016RXlORFF3TVZvWERUSXpNRGd3TXpFeU5EUXdNVm93S1RFbk1DVUdBMVVFQXd3ZWRtRnNhV1JoCmRHbHVaeTEzWldKb2IyOXJMbVJsWm1GMWJIUXVjM1pqTUlJQ0lqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FnOEEKTUlJQ0NnS0NBZ0VBd3VlUGVTQndCSGFjMU1IdlJ5OEh5dlBjcW14ZEtWU0IvSmk3aUFoVmU2LzAxZ1pzUkx6WgpqaU84cDM5Ukxi [...]
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        operations: ["CREATE"]
        scope: Namespaced
    sideEffects: None
    admissionReviewVersions: ["v1"]
